# controllers/auth/refresh.js
@@ -1,31 +1,43 @@
 const jwt = require('jsonwebtoken');
 const { User } = require('../../models/user');
 const { HttpError } = require('../../utils');
-const { SECRET_KEY } = process.env;
+const { ACCESS_SECRET_KEY, REFRESH_SECRET_KEY } = process.env;
 
 const refresh = async (req, res) => {
-  const { token } = req.body;
+  const { refreshToken: tokenToRefresh } = req.body;
 
   try {
-    const { id } = jwt.verify(token, SECRET_KEY);
-    const user = await User.findById(id);
-    if (!user || !user.token || user.token !== token) throw HttpError(401);
+    const { id } = jwt.verify(tokenToRefresh, REFRESH_SECRET_KEY);
+    const isExist = await User.findOne({ refreshToken: tokenToRefresh });
+
+    if (!isExist) throw HttpError(403, 'Token invalid');
 
     const payload = {
-      id: user._id,
+      id,
     };
-    const refreshedToken = jwt.sign(payload, SECRET_KEY, { expiresIn: '23h' });
-    await User.findByIdAndUpdate(user._id, { token: refreshedToken });
+
+    const token = jwt.sign(payload, ACCESS_SECRET_KEY, {
+      expiresIn: '2m',
+    });
+    const refreshToken = jwt.sign(payload, REFRESH_SECRET_KEY, {
+      expiresIn: '7d',
+    });
+
+    const user = await User.findByIdAndUpdate(id, {
+      token,
+      refreshToken,
+    });
 
     res.status(200).json({
-      token: refreshedToken,
+      token,
+      refreshToken,
       user: {
         email: user.email,
         username: user.username,
       },
     });
   } catch (error) {
-    throw HttpError(401, error.message);
+    throw HttpError(403, error.message);
   }
 };
 
